deployments/deploy/openim-crontask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openim-crontask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crontask
  template:
    metadata:
      labels:
        app: crontask
    spec:
      nodeSelector:
        kubernetes.io/hostname: node1
      containers:
        - name: crontask-container
          image: 10.88.88.13:81/app/openim-crontask:v260202125441
          volumeMounts:
            - name: openim-config
              mountPath: "/config"
              readOnly: true
      volumes:
        - name: openim-config
          configMap:
            name: openim-config
