deployments/deploy/openim-msggateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messagegateway-rpc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messagegateway-rpc-server
  template:
    metadata:
      labels:
        app: messagegateway-rpc-server
    spec:
      nodeSelector:
        kubernetes.io/hostname: node1
      containers:
        - name: openim-msggateway-container
          image: 10.88.88.13:81/app/openim-msggateway:v260202135653
          volumeMounts:
            - name: openim-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10140
            - containerPort: 12001
      volumes:
        - name: openim-config
          configMap:
            name: openim-config
