deployments/deploy/openim-msgtransfer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openim-msgtransfer-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openim-msgtransfer-server
  template:
    metadata:
      labels:
        app: openim-msgtransfer-server
    spec:
      containers:
        - name: openim-msgtransfer-container
          image: 10.88.88.13:81/app/openim-msgtransfer:v260201212125
          volumeMounts:
            - name: openim-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 12020
      volumes:
        - name: openim-config
          configMap:
            name: openim-config
