deployments/deploy/openim-rpc-msg-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msg-rpc-server
  namespace: openim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msg-rpc-server
  template:
    metadata:
      labels:
        app: msg-rpc-server
    spec:
      nodeSelector:
        kubernetes.io/hostname: node1
      containers:
        - name: msg-rpc-server-container
          image: 10.88.88.13:81/app/openim-rpc-msg:v260202125441
          volumeMounts:
            - name: openim-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10280
            - containerPort: 12280
      volumes:
        - name: openim-config
          configMap:
            name: openim-config
