deployments/deploy/openim-rpc-third-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: third-rpc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: third-rpc-server
  template:
    metadata:
      labels:
        app: third-rpc-server
    spec:
      containers:
        - name: third-rpc-server-container
          image: 10.88.88.13:81/app/openim-rpc-third:v260202105319
          volumeMounts:
            - name: openim-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10300
            - containerPort: 12300
      volumes:
        - name: openim-config
          configMap:
            name: openim-config
