deployments/deploy/openim-rpc-user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-rpc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-rpc-server
  template:
    metadata:
      labels:
        app: user-rpc-server
    spec:
      containers:
        - name: user-rpc-server-container
          image: openim/openim-rpc-user:v3.8.3
          volumeMounts:
            - name: openim-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10320
            - containerPort: 12320
      volumes:
        - name: openim-config
          configMap:
            name: openim-config
