deployments/deploy/kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    app: kafka
spec:
  type: ExternalName
  externalName: 10.88.88.13
  ports:
    - name: plaintext
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
    - name: external
      port: 19094
      targetPort: 9094
