deployments/deploy/openim-rpc-auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-rpc-service
spec:
  selector:
    app: auth-rpc-server
  ports:
    - name: grpc
      protocol: TCP
      port: 10200
      targetPort: 10200
    - name: prometheus
      protocol: TCP
      port: 12200
      targetPort: 12200
  type: ClusterIP
