deployments/deploy/openim-rpc-msg-service.yml
apiVersion: v1
kind: Service
metadata:
  name: msg-rpc-service
spec:
  selector:
    app: msg-rpc-server
  ports:
    - name: grpc
      protocol: TCP
      port: 10280
      targetPort: 10280
    - name: prometheus
      protocol: TCP
      port: 12280
      targetPort: 12280
  type: ClusterIP
