deployments/deploy/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
spec:
  type: ExternalName
  externalName: 10.88.88.13
  ports:
    - name: redis-port
      protocol: TCP
      port: 6379
      targetPort: 6379
