deployments/deploy/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openim-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: backend-openim.36x9.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: openim-api-service
                port:
                  number: 10002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openim-msggateway-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "openim-msggateway-service"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: backend-openim.36x9.com
      http:
        paths:
          - path: /msggateway(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: openim-msggateway-service
                port:
                  number: 10001
